--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,22 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.4</version>
+    <version>2.7.3</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>eu.dissco</groupId>
-  <artifactId>demo-orchestration-backend</artifactId>
+  <groupId>eu.dissco.core</groupId>
+  <artifactId>orchestration-backend</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>demo orchestration backend</name>
-  <description>Demo backend for orchestration service</description>
+  <name>Orchestration backend</name>
+  <description>Backend for orchestration service</description>
   <properties>
     <java.version>17</java.version>
 		<keycloak-adapter-bom.version>16.1.1</keycloak-adapter-bom.version>
-    <k8s-client-java.version>14.0.1</k8s-client-java.version>
+    <k8s-client-java.version>16.0.0</k8s-client-java.version>
+    <sonar.organization>dissco</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.coverage.jacoco.xmlReportPaths>../app-it/target/site/jacoco-aggregate/jacoco.xml
+    </sonar.coverage.jacoco.xmlReportPaths>
   </properties>
 
   <dependencyManagement>
@@ -45,8 +49,12 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.kafka</groupId>
-      <artifactId>spring-kafka</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jooq</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -112,7 +120,7 @@
   </dependencies>
 
   <build>
-    <defaultGoal>clean verify</defaultGoal>
+    <defaultGoal>clean validate</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -125,6 +133,55 @@
             </exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.7</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <formats>
+                <format>XML</format>
+              </formats>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.jooq</groupId>
+        <artifactId>jooq-codegen-maven</artifactId>
+        <version>${jooq.version}</version>
+        <configuration>
+          <configurationFile>src/main/resources/jooq-configuration.xml</configurationFile>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${javax-jaxb.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${glassfish-jaxb.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
