--- a/pom.xml
+++ b/pom.xml
@@ -156,10 +156,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-properties-migrator</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
     </dependency>
   </dependencies>
+
 
   <build>
     <defaultGoal>clean validate</defaultGoal>
