--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
       </plugin>
       <plugin>
         <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>eu.dissco.orchestration.backend.security.*</exclude>
+          </excludes>>
+        </configuration>
         <executions>
           <execution>
             <goals>
