--- a/.github/workflows/.trivyignore
+++ b/.github/workflows/.trivyignore
@@ -4,41 +4,41 @@
 # Package: dpkg
 # Issue: Upgrade 1.20.9 -> 1.20.10
 # Severity: Critical
-# Status: Jira DD-446
+# Status: Jira DD-516
 CVE-2022-1664
 
 # Date: April 12, 2023
 # Package: gzip
 # Issue: Upgrade 1.10-4 -> 1.10.4+deb11u1
 # Severity: High
-# Status: Jira DD-446
+# Status: Jira DD-516
 
 # Date: April 12, 2023
 # Package: lib-bin in getcwd()
 # Issue: Upgrade 2.31-13+deb11u3 -> 2.31-13+deb11u4
 # Severity: High
-# Status: Jira DD-446
+# Status: Jira DD-516
 CVE-2021-3999
 
 # Date: April 12, 2023
 # Package: libgnutls30 gnutls_pkcs7_verif
 # Issue: Upgrade 3.7.1-5 -> 3.7.1-5+deb11u2
 # Severity: High
-# Status: Jira DD-446
+# Status: Jira DD-516
 CVE-2022-2509
 
 # Date: April 12, 2023
 # Package: Key exchange code
 # Issue: Upgrade to -> 3.7.1-5+deb11u2
 # Severity: High
-# Status: Jira DD-446
+# Status: Jira DD-516
 CVE-2023-0361
 
 # Date: April 12, 2023
 # Package: Libk5crypto3
 # Issue: Upgrade to -> 1.18.3-6+deb11u3
 # Severity: High
-# Status: Jira DD-446
+# Status: Jira DD-516
 CVE-2022-42898
 
 # Other OS Vulnerabilities
@@ -58,17 +58,9 @@ CVE-2022-4450
 CVE-2023-0215
 CVE-2023-0286
 CVE-2022-37434
+CVE-2022-29458
 
 # ** Java Vulnerabilities ** #
-
-# Date: April 12, 2023
-# Package: Jackson-databind
-# Issue: Upgrade 2.13.3 -> 2.13.4.1
-# Severity: High
-# Notes: 2 CVEs
-# Status: Jira DD-446
-CVE-2022-42003
-CVE-2022-42004
 
 # Date: April 12, 2023
 # Package: Protobuf-java
@@ -80,48 +72,11 @@ CVE-2022-3171
 CVE-2022-3509
 CVE-2022-3510
 
-# Date: April 12, 2023
-# Package: Tomcat
-# Issue: Upgrade 9.0.65 -> 9.0.69
-# Severity: High
-# Status: Jira DD-446
-CVE-2022-45143
-
-# Date: April 12, 2023
-# Package: postgresql
-# Issue: Upgrade 942.3.6 -> 42.3.7
-# Severity: High
-# Status: Jira DD-446
-CVE-2022-31197
-
 # ** Spring boot vulnerabilities ** #
 
 # Date: April 13, 2023
-# Package: Spring-security-core
-# Issue: Upgrade Spring boot
-# Severity: Critical
-# Status: Jira Ticket DD-243
-CVE-2022-31690
-
-# Date: April 13, 2023
-# Package: Spring-security-web
-# Issue: Upgrade Spring boot
-# Severity: Critical
-# Status: Jira Ticket DD-243
-CVE-2022-31690
-CVE-2022-31692
-
-# Date: April 13, 2023
-# Package: Spring-web
-# Issue: Upgrade Spring boot
-# Severity: Critical
-# Status: Jira Ticket DD-243
-CVE-2016-1000027
-
-# Date: April 13, 2023
 # Package: snakeyaml
-# Issue: Upgrade Spring boot
+# Issue: Upgrade Spring boot did not fix
 # Severity: Critical, High
 # Status: Jira Ticket DD-243
 CVE-2022-1471
-CVE-2022-25857
