--- a/.github/workflows/.trivyignore
+++ b/.github/workflows/.trivyignore
@@ -68,9 +68,9 @@ CVE-2022-29458
 # Severity: High
 # Notes: 3 CVEs
 # Status: Jira DD-446
-CVE-2022-3171
-CVE-2022-3509
-CVE-2022-3510
+#CVE-2022-3171
+#CVE-2022-3509
+#CVE-2022-3510
 
 # ** Spring boot vulnerabilities ** #
 
@@ -79,4 +79,4 @@ CVE-2022-3510
 # Issue: Upgrade Spring boot did not fix
 # Severity: Critical, High
 # Status: Jira Ticket DD-243
-CVE-2022-1471
+#CVE-2022-1471
