--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <description>Backend for orchestration service</description>
   <properties>
     <java.version>17</java.version>
+    <snakeyaml.version>2.0</snakeyaml.version>
     <k8s-client-java.version>16.0.0</k8s-client-java.version>
     <sonar.organization>dissco</sonar.organization>
     <testcontainers.version>1.17.6</testcontainers.version>
