Restore kubernetes config

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
       <version>${k8s-client-java.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>${httpclient5.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>${apachecommons.version}</version>
