Added machine annotation service

--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
   </dependencies>
 
   <build>
-    <defaultGoal>clean validate</defaultGoal>
+    <defaultGoal>-B verify</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
