--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <k8s-client-java.version>18.0.0</k8s-client-java.version>
     <mockito-inline.version>5.2.0</mockito-inline.version>
     <snakeyaml.version>2.0</snakeyaml.version>
+    <json-patch.version>1.13</json-patch.version>
     <sonar.organization>dissco</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.jacoco.xmlReportPaths>
@@ -73,6 +74,10 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.kubernetes</groupId>
       <artifactId>client-java</artifactId>
       <version>${k8s-client-java.version}</version>
@@ -100,6 +105,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.java-json-tools</groupId>
+      <artifactId>json-patch</artifactId>
+      <version>${json-patch.version}</version>
     </dependency>
 
     <dependency>
