Add keda deployment

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
       <artifactId>json-patch</artifactId>
       <version>${json-patch.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
