--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.0</version>
+    <version>3.1.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>eu.dissco.core</groupId>
@@ -19,6 +19,7 @@
     <apachecommons.version>4.3</apachecommons.version>
     <k8s-client-java.version>18.0.0</k8s-client-java.version>
     <mockito-inline.version>5.2.0</mockito-inline.version>
+    <snappy-java.version>1.1.10.5</snappy-java.version>
     <snakeyaml.version>2.0</snakeyaml.version>
     <json-patch.version>1.13</json-patch.version>
     <sonar.organization>dissco</sonar.organization>
@@ -116,8 +117,9 @@
       <version>${json-patch.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
+      <groupId>org.xerial.snappy</groupId>
+      <artifactId>snappy-java</artifactId>
+      <version>${snappy-java.version}</version>
     </dependency>
 
 
