--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <mockito-inline.version>5.2.0</mockito-inline.version>
     <json-patch.version>1.13</json-patch.version>
     <sonar.organization>dissco</sonar.organization>
+    <logback.version>1.4.12</logback.version>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.jacoco.xmlReportPaths>
       ../app-it/target/site/jacoco-aggregate/jacoco.xml
