--- a/.github/workflows/.trivyignore
+++ b/.github/workflows/.trivyignore
@@ -1,4 +1,4 @@
-# Date: November 14, 2023
-# Issue: openssl: Incorrect cipher key and IV length processing https://avd.aquasec.com/nvd/cve-2023-5363
-# Solution: Docker image needs an update
-CVE-2023-5363
+# Date: Feb 27, 2024
+# Notes: Issue with libexpat, parsing large tokens can trigger a denial of service
+# Needs to be fixed in Docker Image.
+CVE-2023-52425
