--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.0</version>
+    <version>3.2.3</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>eu.dissco.core</groupId>
@@ -16,17 +16,17 @@
   <description>Backend for orchestration service</description>
   <properties>
     <java.version>17</java.version>
-    <apachecommons.version>4.3</apachecommons.version>
-    <k8s-client-java.version>19.0.0</k8s-client-java.version>
-    <mockito-inline.version>5.2.0</mockito-inline.version>
+    <apachecommons.version>4.4</apachecommons.version>
+    <apachecommons-compress.version>1.26.0</apachecommons-compress.version>
+    <k8s-client-java.version>20.0.0</k8s-client-java.version>
     <json-patch.version>1.13</json-patch.version>
+    <testcontainers.version>1.19.6</testcontainers.version>
+    <mockito-inline.version>5.2.0</mockito-inline.version>
     <sonar.organization>dissco</sonar.organization>
-    <logback.version>1.4.12</logback.version>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.jacoco.xmlReportPaths>
       ../app-it/target/site/jacoco-aggregate/jacoco.xml
     </sonar.coverage.jacoco.xmlReportPaths>
-    <testcontainers.version>1.17.6</testcontainers.version>
   </properties>
 
   <dependencyManagement>
@@ -114,6 +114,12 @@
       <groupId>com.github.java-json-tools</groupId>
       <artifactId>json-patch</artifactId>
       <version>${json-patch.version}</version>
+    </dependency>
+    <!-- Added because of CVE-2024-25710 and CVE-2024-26308 in kuberentes and testcontainer  -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>${apachecommons-compress.version}</version>
     </dependency>
 
     <dependency>
