--- a/src/main/resources/json-schema/data-mapping.json
+++ b/src/main/resources/json-schema/data-mapping.json
@@ -1,5 +1,5 @@
 {
-  "$id": "https://schemas.dissco.tech/schemas/fdo-type/mapping/0.3.0/data-mapping.json",
+  "$id": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.3.0/data-mapping.json",
   "$schema": "https://json-schema.org/draft/2020-12/schema",
   "$comment": "Data Mapping Version 0.3.0",
   "title": "DataMapping",
@@ -85,13 +85,10 @@
     "ods:DefaultMapping": {
       "type": "array",
       "description": "A mapping object setting default values for ods terms. These default mappings will be set for each record in the dataset. Key is the ods term, value the default value to use",
-      "items": {
-        "type": "object"
-      },
       "examples": [
         [
           {
-            "ods:physicalSpecimenIdType": "cetaf"
+            "ods:physicalSpecimenIDType": "Global"
           },
           {
             "ods:type": "ZoologyVertebrateSpecimen"
@@ -100,21 +97,24 @@
             "ods:organisationId": "https://ror.org/05xg72x27"
           }
         ]
-      ]
+      ],
+      "items": {
+        "$ref": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.3.0/default-mapping.json"
+      }
     },
     "ods:FieldMapping": {
       "type": "array",
       "description": "Setting an explicit mapping for an ods term to a term from the incoming dataset. Key is the ods term, value the incoming data standard term",
-      "items": {
-        "type": "object"
-      },
       "examples": [
         [
           {
             "ods:physicalSpecimenId": "dwc:catalogNumber"
           }
         ]
-      ]
+      ],
+      "items": {
+        "$ref": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.3.0/field-mapping.json"
+      }
     },
     "ods:mappingDataStandard": {
       "description": "Type of data standard we are mapping to",
@@ -135,7 +135,6 @@
     "ods:ID",
     "ods:type",
     "schema:version",
-    "schema:name",
     "schema:dateCreated",
     "schema:dateModified",
     "schema:creator",
