--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar 
                   -Dsonar.projectKey=DiSSCo_${{ github.event.repository.name }}
                   -Dsonar.exclusions=**/jooq/**
-                  -Dsonar.coverage.exclusions=**/properties/**,**/configuration/**,**/domain/**,**/exception/**,**/maven/**
+                  -Dsonar.coverage.exclusions=**/properties/**,**/configuration/**,**/maven/**
       - name: Login to Public ECR
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -47,28 +47,11 @@ jobs:
       - name: Build image
         run: |
           docker build -t ${{ github.event.repository.name }} .
-      - name: Trivy - List all vulnerabilities
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: '${{ github.event.repository.name }}'
-          format: 'table'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-      - name: Trivy - Stop on Severe Vulnerabilities
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: '${{ github.event.repository.name }}'
-          format: 'table'
-          ignore-unfixed: true
-          trivyignores: .github/workflows/.trivyignore
-          exit-code: '1'
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: public.ecr.aws/dissco/${{ github.event.repository.name }}
+          images: public.ecr.aws/m8w1i6p4/${{ github.event.repository.name }}
           tags: |
             type=sha
             type=raw,value=latest
