--- a/src/main/resources/json-schema/data-mapping-request.json
+++ b/src/main/resources/json-schema/data-mapping-request.json
@@ -1,29 +1,31 @@
 {
-  "$id": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.3.0/data-mapping-request.json",
+  "$id": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.4.0/data-mapping-request.json",
   "$schema": "https://json-schema.org/draft/2020-12/schema",
-  "$comment": "Data Mapping Request Version 0.3.0",
+  "$comment": "Data Mapping Request Version 0.4.0",
   "title": "DataMapping",
   "type": "object",
   "properties": {
     "schema:name": {
       "type": "string",
-      "description": "Name of the Mapping as provided by the user, https://schema.org/name",
+      "description": "Name of the Mapping as provided by the user",
       "examples": [
-        "Default Mapping for Herbarium of University of Coimbra (COI)"
+        "Default Mapping for Herbarium of University of Coimbra (COI)",
+        "Mapping for Naturalis Darwin Core Archives"
       ]
     },
     "schema:description": {
       "type": "string",
-      "description": "Description of the Mapping as provided by the user, https://schema.org/description",
+      "description": "Description of the Mapping as provided by the user",
       "examples": [
-        "The default mapping for the Herbarium of the University of Coimbra (COI) to the Darwin Core standard."
+        "The default mapping for the Herbarium of the University of Coimbra (COI) to the Darwin Core standard.",
+        "A mapping that can be used for all Naturalis datasets"
       ]
     },
-    "ods:DefaultMapping": {
+    "ods:hasDefaultMapping": {
       "type": "array",
       "description": "A mapping object setting default values for ods terms. These default mappings will be set for each record in the dataset. Key is the ods term, value the default value to use",
       "items": {
-        "$ref": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.3.0/default-mapping.json"
+        "$ref": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.4.0/default-mapping.json"
       },
       "examples": [
         [
@@ -39,11 +41,11 @@
         ]
       ]
     },
-    "ods:FieldMapping": {
+    "ods:hasTermMapping": {
       "type": "array",
       "description": "Setting an explicit mapping for an ods term to a term from the incoming dataset. Key is the ods term, value the incoming data standard term",
       "items": {
-        "$ref": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.3.0/field-mapping.json"
+        "$ref": "https://schemas.dissco.tech/schemas/fdo-type/data-mapping/0.4.0/term-mapping.json"
       },
       "examples": [
         [
@@ -56,10 +58,15 @@
     "ods:mappingDataStandard": {
       "description": "Type of data standard we are mapping to",
       "enum": [
-        "dwc",
-        "abcd",
-        "abcdefg"
+        "DwC",
+        "ABCD",
+        "ABCDEFG"
       ]
+    },
+    "ods:hasTombstoneMetadata": {
+      "type": "object",
+      "description": "Object containing the tombstone metadata of the object. Only present when ods:status is ods:Tombstone",
+      "$ref": "https://schemas.dissco.tech/schemas/fdo-type/shared-model/0.4.0/tombstone-metadata.json"
     }
   },
   "required": [
