--- a/.github/workflows/.trivyignore
+++ b/.github/workflows/.trivyignore
@@ -1,7 +1,3 @@
-# Aug 18 2025 - Spring needs to update
+# Sep 8 - Spring needs to update
 # Issue with netty
-CVE-2025-55163
-
-# Aug 18 2025 - Spring needs to update
-# Issue with tomcat-embed-core
- VE-2025-48989
+CVE-2025-58056
