--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <name>Orchestration backend</name>
   <description>Backend for orchestration service</description>
   <properties>
-    <java.version>21</java.version>
+    <java.version>25</java.version>
     <k8s-client-java.version>24.0.0</k8s-client-java.version>
     <json-patch.version>0.6.2</json-patch.version>
     <testcontainers.version>1.21.1</testcontainers.version>
@@ -320,6 +320,18 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+            </path>
+          </annotationProcessorPaths>
+        </configuration>
       </plugin>
     </plugins>
   </build>
